tasbe7 complete && qouran

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,15 @@
-<resources>
-    <string name="app_name">denii</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-</resources>
+    <resources xmlns:android="http://schemas.android.com/apk/res/android">
+        <string name="app_name">denii</string>
+        <!-- TODO: Remove or change this placeholder text -->
+        <string name="hello_blank_fragment">Hello blank fragment</string>
+        <string name="TOTal"></string>
+        <string-array name="tasb7at">
+            <item> الله اكبر </item>
+            <item> سبحان لله </item>
+            <item>الحمدلله </item>
+            <item> لا حول ولا قوة الا بالله</item>
+            <item>لا اله الا الله</item>
+        </string-array>
+
+    </resources>
